--- a/Curtains.css
+++ b/Curtains.css
@@ -14,7 +14,7 @@
     animation-timing-function: linear;
     animation-duration: 3s;
     animation-direction: alternate;
-    animation-iteration-count: 2;
+    animation-iteration-count: infinite;
     border: 1px solid black;
     background-color: brown;
     height: 100%;
