--- a/Curtains.css
+++ b/Curtains.css
@@ -13,7 +13,7 @@
     animation-direction: alternate;
     animation-iteration-count: infinite;
     border: 1px solid black;
-    background-color: brown;
+    background-size: 100px;
     height: 100%;
 }
 
@@ -27,9 +27,13 @@
 }
 
 .curtain-left {
-    left: 0; 
+    left: 0;
+    background-image: linear-gradient(to left, #aa0000, 35%, black, 50%, #aa0000, 70%, black, 90%, #aa0000);
+    background-position: right;
 }
 
 .curtain-right {
     right: 0;
+    background-image: linear-gradient(to right, #aa0000, 35%, black, 50%, #aa0000, 70%, black, 90%, #aa0000);
+    background-position: left;
 }
